@@ -12,6 +12,7 @@
 
 ngircd 0.8-CVS
 
+  - Fixed wrong variable names in output of "ngircd --configtest".
   - Debian: Fxied the name of the "default file" in the init script for
     ngircd-full packages. And do the test if the binary is executable after
     reading this file.
@@ -537,4 +538,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.233.2.7 2004/09/06 00:36:49 alex Exp $
+$Id: ChangeLog,v 1.233.2.8 2004/09/27 11:30:52 alex Exp $
